# bb8_ws

./: .gitignore
src/alex_bot/: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  sudo_apt_things.md
src/alex_bot/ESP_32/test_2/src/: main.cpp
src/alex_bot/config/: bb8_view.rviz  my_controllers.yaml  round_bot.rviz  view_bot_good.rviz
src/alex_bot/custom_nodes/: counter_publisher.py  imu_to_tf.py  joystick_motor_publisher.py  motor_command_publisher.py
src/alex_bot/description/: bb8.urdf.xacro  bb8_core.xacro  bb8_gazebo_control.xacro  ros2_control.xacro  round_bot.urdf.xacro  round_bot_core.xacro
src/alex_bot/launch/: ball_tracker.launch.py  bb8_launch_sim.launch.py  bb8_rsp.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  round_bot.launch.py  rsp.launch.py
src/alex_bot/msg/: MotorCommand.msg
src/alex_bot/raspberry_tests/: blink.py
src/alex_bot/raspberry_to_esp_communication/: client_sub.py  communicate.py
src/detections/: package.xml  setup.py
src/detections/detections/: yolov8_object_detection_ncnn_node.py
src/detections/launch/: yolo_ncnn.launch.py
src/detections/models/yolov10n_ncnn_model/: metadata.yaml  model.ncnn.param
src/detections/models/yolov8s_ncnn_model/: model_ncnn.py
src/detections/utils/: onnx2ncnn.py  yolo_download.py
src/face_detector/: package.xml  setup.py
src/face_detector/face_detector/: face_detector_dnn_node.py  face_detector_node.py  yolov8_object_detector_node.py  yolov8s_object_detection_ncnn_node.py
src/face_detector/launch/: face_detector.launch.py  face_detector_dnn.launch.py
src/face_detector/utils/: yolo_download.py  yolo_to_onnx.py
src/power_monitor/: package.xml  setup.py
src/power_monitor/launch/: power_monitor.launch.py
src/power_monitor/power_monitor/: combined_publisher.py  power_monitor_subscriber.py  rpi_publisher.py  ups_publisher.py
src/power_monitor/utils/: data_types.py  hardware_interface.py
src/velocity_with_cam/: package.xml  setup.cfg  setup.py
(+22 files in other folders)
