<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detections</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bb8@todo.todo">bb8</maintainer>
  <license>TODO: License declaration</license>
  
  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ROS dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <!-- Python libraries used -->
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>

  <!-- If you use ncnn Python bindings from PyPI or system-wide -->
  <exec_depend>ncnn</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
