<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>power_monitor</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="arazm21@freeuni.edu.ge">bb8</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>power_monitor_interfaces</depend>

  <exec_depend>python3-smbus2</exec_depend>
  <exec_depend>python3-gpiozero</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
